--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Linkando os ícones ao seu site -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
 
-    <link rel="stylesheet" href="../css/styles.css" >
+    <link rel="stylesheet" href="./public/css/styles.css" >
    
   <title>EDUNOW</title>
   </head>
