--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
   <nav class="navbar navbar-light  ">
-  <a class="navbar-brand"><img class="w-50"src="./public/img/logo.png"></a>
+  <a class="navbar-brand">EDUNOW</a>
   </nav>
 
 
@@ -93,7 +93,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="./public/img/logo2.png">
+       <a class="navbar-brand">EDUNOW</a>
       </div>
       <div class="col-12 col-md-3">
         <ul class="list-inline">
