--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Linkando os ícones ao seu site -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
 
-    <link rel="stylesheet" href="./public/css/styles.css" >
+
    
   <title>EDUNOW</title>
   </head>
@@ -27,10 +27,10 @@
     <div class="row ">
       <div class="col-md-4 form-home offset-md-7 p-4">
         <h2 class="mb-4 text-center">Sair de dentro da caixa e venha programar</h2>
-        <form class="form-inline"  action="/cadastro" method="post">
+        <form class="form-inline"  action="./cadastro" method="post">
           <button type="submit" class="btn btn-lg btn-block btn-outline-dark">cadastra</button>
         </form>
-           <form class="form-inline" action="/login" method="post">
+           <form class="form-inline" action="./app/login.ejs" method="post">
           <button type="submit" class="btn btn-lg btn-block btn-outline-dark">acessar</button>
         </form>
       </div>
@@ -89,27 +89,27 @@
   </div>
   </section>
 
-  <footer class="bg-black p-5 ">
+  <footer class="bg-dark p-5 ">
   <div class="container">
     <div class="row">
       <div class="col">
-       <a class="navbar-brand">EDUNOW</a>
+       <a class="navbar-brand text-white">EDUNOW</a>
       </div>
       <div class="col-12 col-md-3">
         <ul class="list-inline">
-          <li><a href="#">home</a></li>
-          <li><a href="#">Sobre nós</a></li>
-          <li><a href="#">Preço</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a class='text-white' href="#">home</a></li>
+          <li><a class='text-white' href="#">Sobre nós</a></li>
+          <li><a class='text-white' href="#">Preço</a></li>
+          <li><a class='text-white' href="#">Contato</a></li>
         </ul>
         
       </div>
       <div class="col-12 col-md-3">
         <ul class="list-inline">
-          <li><a href="#">blog</a></li>
-          <li><a href="#">Pesquisa</a></li>
-          <li><a href="#">Privacidade</a></li>
-          <li><a href="#">Comunidade</a></li>
+          <li><a  class='text-white' href="#">blog</a></li>
+          <li><a class='text-white' href="#">Pesquisa</a></li>
+          <li><a class='text-white' href="#">Privacidade</a></li>
+          <li><a class='text-white' href="#">Comunidade</a></li>
         </ul>
         
       </div>
