--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <form class="form-inline"  action="./cadastro" method="post">
           <button type="submit" class="btn btn-lg btn-block btn-outline-dark">cadastra</button>
         </form>
-           <form class="form-inline" action="./app/login.ejs" method="post">
+           <form class="form-inline" action="/login" method="post">
           <button type="submit" class="btn btn-lg btn-block btn-outline-dark">acessar</button>
         </form>
       </div>
